<resources>
    <string name="app_name">KeyGuard</string>

    <string name="navigation_drawer_open">打开侧滑菜单</string>
    <string name="navigation_drawer_close">关闭侧滑菜单</string>

    <string name="action_settings">设置</string>
    <string name="subtype_en_US">KeyGuard 输入法</string>
    <string name="about_puff">
        "KeyGuard是一款密码管理器，使用BlowFish进行加密 \n"
    </string>

    <string name="about_bcrypt">
        "Bcrypt是一种标准的对称加密算法 \n"
    </string>g

    <string name="title_activity_add_account">添加账户</string>
    <string name="title_activity_authorize">使用主密码进行认证登录</string>

    <!-- Strings related to login -->
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">主密码</string>
    <!--<string name="action_sign_in">Sign in or register</string>-->
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">邮件地址无效</string>
    <string name="error_invalid_password">您的密码太短了</string>
    <string name="error_incorrect_password">密码错误</string>
    <!--</string>-->
    <string name="title_activity_set_master_password">设置主密码</string>
    <string name="title_activity_set_quick_password">设置快速登录密码</string>
    <!--<string name="section_format">Hello World from section: %1$d</string>-->
    <string name="title_intro_one">您的所有条目均处于安全保护区</string>
    <string name="title_intro_two"><![CDATA[快速安全的登录]]></string>
    <string name="title_intro_three"><![CDATA[KeyGuard]]></string>
    <string name="select_image">选择图片</string>
    <string name="type">类型</string>
    <string name="password_is_empty">密码为空</string>
    <string name="cancel_qm">确定要取消吗？</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="master_password_invalid">主密码无效</string>
    <string name="choose_category_and_account"><![CDATA[选择账户]]></string>
    <string name="categories">目录</string>
    <string name="password_dont_match_em">密码不匹配</string>
    <string name="password_is_not_strong">为保证安全，您的密码必须同时包含大小写字母及数字</string>
    <string name="password_is_too_short_em">您的密码太短了！</string>
    <string name="enter_main_password">请输入主密码</string>
    <string name="confirm_main_password">再次输入主密码</string>
    <string name="set_gesture_password">设置手势密码</string>
    <string name="verify_gesture_password">校验手势密码</string>
    <string name="settings">设置</string>
    <string name="security">安全</string>
    <string name="need_password_when_launch">登录时需要主密码</string>
    <string name="disable_gesture_lock">取消手势锁</string>
    <string name="enable_gesture_lock">开启手势锁</string>
    <string name="change_master_password">更改主密码</string>
    <string name="enable_puff_secure_keyboard">允许使用KeyGuard软键盘</string>
    <string name="puff_secure_keyboard">KeyGuard 软键盘</string>
    <string name="please_enable_puf_ime">请允许KeyGuard软键盘开启！</string>
    <string name="database">数据库</string>
    <string name="export_database">导出数据库</string>
    <string name="database_file_can_be_used">数据库文件能够在其他平台使用</string>
    <string name="confrim_export_database">您想将数据库导出至外部存储设备吗？</string>
    <string name="about">关于</string>
    <string name="about_puff_title">关于KeyGuard</string>
    <string name="success_em">成功！!</string>
    <string name="failed_em">失败！!</string>
    <string name="database_exported_to">数据库已经导出至</string>
    <string name="ok">好的</string>
    <string name="please_try_again">请您再试一次</string>
    <string name="pin">Pin</string>
    <string name="view">视图</string>
    <string name="copy">拷贝</string>
    <string name="title">标题</string>
    <string name="type_and_category"><![CDATA[类型与目录:]]></string>
    <string name="account">账户</string>
    <string name="password">密码</string>
    <string name="generate_secure_password">随机产生安全密码</string>
    <string name="additional_code_quote_optional">其他标志 (可选的)</string>
    <string name="website_link_quote_optional">链接地址 (可选的)</string>
    <string name="icon">图标</string>
    <string name="name">名称</string>
    <string name="okay">确定</string>
    <string name="cancel">取消</string>
    <string name="category_colon">目录 :</string>
    <string name="authorize">认证</string>
    <string name="additional_code">其他标志</string>
    <string name="website_link">链接地址</string>
    <string name="last_accessed">上一次登录</string>
    <string name="click_add_button_to_add_an_account">点击添加按钮添加一个条目</string>
    <string name="your_secure_password_is_comma">您的安全密码是:</string>
    <string name="generate_again_em">再次创建</string>
    <string name="copy_and_close">复制并关闭</string>
    <string name="step_intro_hint">此实用程序将为您生成安全密码。输入密码长度，然后单击下一步按钮。</string>
    <string name="which_kind_of_password_qm">您需要哪一类密码？</string>
    <string name="numbers_only">仅包含数字</string>
    <string name="secure_password">安全密码</string>
    <string name="secure_and_easy">安全且方便记忆</string>
    <string name="tell_me_your_fav_words">告诉我你最喜欢的词组，我会从他们那里产生一个安全的密码。</string>
    <string name="word_one">词汇 1</string>
    <string name="word_two">词汇 2</string>
    <string name="word_three">词汇 3</string>
    <string name="word_four">词汇 4</string>
    <string name="additional">另外</string>
    <string name="clear">清除</string>
    <string name="click_button_to_add_account">点击添加按钮添加新的账户</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="password_generator">密码生成器</string>
    <string name="warning_master_password">请务必牢记您的主密码，主密码丢失将导致您的数据无法恢复！</string>
    <string name="save">保存</string>
    <string name="fingerprint">请验证您的指纹</string>
    <string name="no_sensor_dialog_title">您的手机没有指纹功能</string>
    <string name="no_sensor_dialog_message">很遗憾，您的手机可能没有指纹功能</string>
    <string name="cancel_btn_dialog">取消</string>
    <string name="no_fingerprint_enrolled_dialog_title">系统中没有注册指纹</string>
    <string name="no_fingerprint_enrolled_dialog_message">系统中并未注册指纹，请您先前往注册</string>
    <string name="disable_fingerprint_lock">关闭指纹锁</string>
    <string name="enable_fingerprint_lock">开启指纹锁</string>
</resources>
