<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="160dp"
    android:background="@color/colorPrimaryDark">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:foregroundGravity="center"
            android:id="@+id/remote_icon"/>
        <!--android:src="@drawable/ic_lock"/>-->
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.0"
            android:id="@+id/remote_name"
            android:layout_height="match_parent"
            android:textSize="30dp"
            android:paddingLeft="16dp"
            android:textColor="#FFF"
            android:gravity="center|left"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:id="@+id/account"
            android:background="@null"
            android:text="@string/account"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:text="@string/password"
            android:background="@null"
            android:id="@id/password"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:text="@string/additional"
            android:background="@null"
            android:id="@+id/additional"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:text="@string/clear"
            android:background="@null"
            android:id="@+id/clear"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>