<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center"
    android:background="@color/white">
    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/ic_yes"/>
    <android.support.v7.widget.AppCompatTextView
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:text="@string/your_secure_password_is_comma"/>
    <android.support.v7.widget.AppCompatTextView
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textSize="32sp"
        android:id="@+id/password"/>
    <android.support.v7.widget.AppCompatButton
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_reload"
        android:text="@string/generate_again_em"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:textSize="18sp"
        android:layout_marginBottom="5dp"/>
    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_copy"
        android:text="@string/copy_and_close"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:textSize="18sp"
        android:layout_marginTop="5dp"/>
</LinearLayout>