<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="160dp"
    tools:context="com.example.leidong.keyguard.ui.activities.SetMasterPasswordActivity"
    tools:showIn="@layout/activity_set_master_password">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="32dp"
        android:id="@+id/set_master"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="44dp"
                        android:layout_marginTop="16dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_password"
                        android:layout_marginRight="16dp"/>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="1.0"
                        android:hint="@string/enter_main_password">
                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:inputType="textPassword"
                            android:textSize="24sp"
                            style="@style/Widget.AppCompat.EditText"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="16dp">
                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="44dp"
                        android:layout_marginTop="16dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_yes"
                        android:id="@+id/confirm_img"
                        android:layout_marginRight="16dp"/>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="1.0"
                        android:hint="@string/confirm_main_password">
                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/confirm"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:textSize="24sp"
                            android:inputType="textPassword"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:id="@+id/help_text"
            android:padding="6dp"
            android:background="@drawable/thin_border"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:padding="6dp"
            android:textSize="24sp"
            android:textColor="@color/colorAccent"
            android:text="@string/warning_master_password"/>
    </LinearLayout>
</FrameLayout>
